# GalbotSDK

./: CHANGELOG.md  LICENSE  README.md  VERSION.md  deploy_to_robot.sh  install.sh
config/: embosa_ip_config.json
docs/: index.html
docs/en/: 404.html  index.html  objects.inv  sitemap.xml
examples/cpp/: CMakeLists.txt  planner_example.cpp
examples/cpp/galbot_motion/src/: attach_tool_example.cpp  collision_detection_example.cpp  detach_tool_example.cpp  env_collider_operation_example.cpp  forward_kinematics_example.cpp  function_use_example.cpp  get_instance_init_example.cpp  get_set_end_effort_pos_example.cpp  inverse_kinematics_example.cpp  multi_point_planning_example.cpp  parameter_use_example.cpp  single_point_planning_example.cpp
examples/cpp/galbot_navigation/src/: blocked_navigation_example.cpp  complete_running_example.cpp  get_instance_init_example.cpp  linear_movement_example.cpp  non_blocking_navigation_example.cpp  relocation_example.cpp
examples/cpp/galbot_robot/src/: execute_joint_trajectory_example.cpp  get_camera_data_example.cpp  get_gripper_state_example.cpp  get_imu_data_example.cpp  get_instance_init_example.cpp  get_joint_names_example.cpp  get_joint_positions_example.cpp  get_joint_states_example.cpp  get_lidar_data_example.cpp  get_suction_cup_state_example.cpp  get_transform_example.cpp  set_base_velocity_example.cpp  set_gripper_command_example.cpp  set_joint_positions_example.cpp  set_suction_cup_command_example.cpp  stop_base_example.cpp  stop_trajectory_execution_example.cpp
galbot_sdk/: common.cmake
licenses/: DEPENDENCIES
(+325 files in other folders)
